@@ -6,6 +6,12 @@
 	insert_step_resume_breakpoint_at_caller.
 	(insert_step_resume_breakpoint_at_frame): Revise comments.
 
+2006-06-10  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* mingw-hdep.c (gdb_select): Always check for NULL fd sets
+	before calling FD_ISSET.  Correct check for exceptfds which
+	previously tested writefds.
+
 2006-06-02  Joel Brobecker  <brobecker@adacore.com>
 
 	* version.in: Increase version number to 6.4.91 after the first
